--- a/package.json
+++ b/package.json
@@ -59,14 +59,16 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "develop": "gatsby develop -p 8001",
+    "dev-m": "gatsby develop --host 192.168.1.30 --port 8001",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean && yarn start",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "move": "rm -rf ../backend/public/main/ && mkdir -p ../backend/public/main && cp -r ./public/ ../backend/public/main/"
+    "move": "rm -rf ../backend/public/main/ && mkdir -p ../backend/public/main && cp -r ./public/ ../backend/public/main/",
+    "laravel": "gatsby build --prefix-paths && yarn move"
   },
   "repository": {
     "type": "git",
