--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@windmill/react-ui": "0.3.1",
     "autoprefixer": "^10.0.4",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "formik": "^2.2.5",
     "gatsby": "next",
     "gatsby-background-image": "next",
@@ -29,6 +30,7 @@
     "postcss": "^8.1.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
