--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-image": "next",
     "gatsby-image-background-slider": "next",
     "gatsby-plugin-manifest": "^2.8.0",
+    "gatsby-plugin-nprogress": "^2.7.0",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-postcss": "next",
     "gatsby-plugin-react-helmet": "next",
