--- a/package.json
+++ b/package.json
@@ -45,14 +45,24 @@
   "devDependencies": {
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.10.0",
+    "cypress": "^6.2.1",
+    "cypress-file-upload": "^4.1.1",
     "eslint": "^7.14.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-emotion": "^5.0.0",
     "gatsby-plugin-eslint": "^2.0.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "prettier": "2.1.2",
+    "react-test-renderer": "^17.0.1",
+    "start-server-and-test": "^1.11.7",
     "tailwindcss": "^2.0.1",
     "twin.macro": "^2.0.4"
   },
@@ -62,13 +72,15 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop -p 8001",
+    "develop": "gatsby develop --port 8001",
     "dev-m": "gatsby develop --host 192.168.1.30 --port 8001",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean && yarn start",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "test": "jest",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8001 cy:open",
     "move": "rm -rf ../backend/public/main/ && mkdir -p ../backend/public/main && cp -r ./public/ ../backend/public/main/",
     "laravel": "gatsby build --prefix-paths && yarn move"
   },
