--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.1.0",
     "react-image-crop": "^8.6.6",
     "react-player": "^2.7.0",
+    "react-qr-code": "^2.0.7",
     "react-share": "^4.3.1",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
